5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1601_820.log
== SUBMITION (2019-03-25 19:09:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_RS50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50 = valor % 50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- EXECUTION TIME:
0.130319
-- ERROR:
  File "/home/codebench/codes/1601/820/main.py", line 8
    valor // 50 = notas_RS50
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:10:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_RS50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50 = valor % 50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_RS50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:10:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_RS50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50 = valor % 50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- EXECUTION TIME:
0.179961
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
